--- a/TeaTrack/my-app/src/app/Components/page-header/page-header-admin.html
+++ b/TeaTrack/my-app/src/app/Components/page-header/page-header-admin.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="actions">
-      <a class="cart-link" href="/cart/">
+      <a class="cart-link" routerLink="/cart/">
         <span class="icon-wrap">
           <img src="assets/icons/Cart.png" alt="Giỏ hàng">
           <span class="cart-badge" data-cart-count>0</span>
@@ -16,19 +16,19 @@
           <span id="headerCartTotal" class="header-cart-total">0đ</span>
         </div>
       </a>
-      <a class="btn login-btn" href="/login/">Đăng nhập</a>
-      <a class="btn signup-btn" href="/register/">Đăng ký</a>
+      <a class="btn login-btn" routerLink="/login/">Đăng nhập</a>
+      <a class="btn signup-btn" routerLink="/register/">Đăng ký</a>
     </div>
   </div>
 
   <nav class="nav-bar">
-    <a href="/" class="nav-item active"><img src="assets/icons/Home.png" alt=""> Trang chủ</a>
-    <a href="/aboutus/"><img src="assets/icons/info.png" alt="">Về chúng tôi</a>
-    <a href="/menu/" class="nav-item"><img src="assets/icons/menu.png" alt="">Menu thức uống</a>
-    <a href="/contact/"><img src="assets/icons/lien_he.png" alt="">Liên hệ</a>
-    <a href="/blog/"><img src="assets/icons/dien_dan.png" alt="">Diễn đàn</a>
-    <a href="/agency/"><img src="assets/icons/chi_nhanh.png" alt="">Chi nhánh</a>
+    <a routerLink="/" class="nav-item active"><img src="assets/icons/Home.png" alt=""> Trang chủ</a>
+    <a routerLink="/aboutus/"><img src="assets/icons/info.png" alt="">Về chúng tôi</a>
+    <a routerLink="/menu/" class="nav-item"><img src="assets/icons/menu.png" alt="">Menu thức uống</a>
+    <a routerLink="/contact/"><img src="assets/icons/lien_he.png" alt="">Liên hệ</a>
+    <a routerLink="/blog/"><img src="assets/icons/dien_dan.png" alt="">Diễn đàn</a>
+    <a routerLink="/agency/"><img src="assets/icons/chi_nhanh.png" alt="">Chi nhánh</a>
   </nav>
 </header>
 
-<link rel="stylesheet" href="/src/app/Components/page-header/page-header.css" />
+<link rel="stylesheet" routerLink="/src/app/Components/page-header/page-header.css" />
